# rfcReader

./: CMakeLists.txt  LICENSE  README.md  resources.qrc  rfcworker.h  settings.h  testrfc.txt
headers/: engine.h  logger.h  networkmanager.h
qml/: Navbar.qml  Settings.qml  main.qml
src/: engine.cpp  main.cpp  networkmanager.cpp  rfcworker.cpp  settings.cpp
